WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31143
Assertion failure in CredentialStorage::set() when proxy credentials are being set
https://bugs.webkit.org/show_bug.cgi?id=31143
Summary
Assertion failure in CredentialStorage::set() when proxy credentials are bein...
Alexey Proskuryakov
Reported
2009-11-04 15:13:44 PST
These fail when url is null, and url is null for proxy credentials. ASSERT(url.protocolInHTTPFamily()); ASSERT(url.isValid());
Attachments
proposed fix
(2.53 KB, patch)
2009-11-04 15:23 PST
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-11-04 15:23:56 PST
Created
attachment 42529
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2009-11-04 15:49:00 PST
Committed <
http://trac.webkit.org/changeset/50530
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug