        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=31143
        Assertion failure in CredentialStorage::set() when proxy credentials are being set

        No test, cannot test proxy behavior.

        * platform/network/CredentialStorage.cpp: (WebCore::CredentialStorage::set): Account for the
        possibility of null url. Release mode changes are likely inconsequential - e.g. we used to
        add "://" to origin set, which is weird, but safe.



Canonical link: https://commits.webkit.org/41960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50530 268f45cc-cd09-0410-ab3c-d52691b4dbfc